= Revision History for Windows Azure Storage for Ruby
v0.5.8 - (unreleased)
-Added signature support for Tables service since it differs slightly from that for a request against the Blob or Queue services, according to msdn.microsoft.com/en-us/library/dd179428.aspx
-Added Table operations to enumerate the tables in a storage account, create a new table, and delete an existing table.
-Fixed an issue on the Queues Documentation (thanks @ezequielm)
-Added _naming validation for Containers_ according to msdn.microsoft.com/en-us/library/dd135715.aspx (thanks @panosjee)
-Added _naming validation for Queues_ according to msdn.microsoft.com/en-us/library/dd179349.aspx (thanks @panosjee)
-Added _support for Blob snapshots_
-Blobs API has been migrated to the 2009-09-19 Version of the Storage API

=== v0.5.7 - (Johnny Halife)
- Fixes a critical bug on URL management that some time prevents message from being deleted, caused by a missing encoding on the URL 	parameters.

=== v0.5.6 -  (Johnny Halife)
- Added signature support for 2009-09-19 Version of the Storage API
- Queues API has been migrated to the 2009-09-19 Version of the Storage API
- Added a new parameter for listing queues with metadata
- Added support for DequeueCount on messages being retrieved from the Queue
- <strong>Known Issue</strong>: Creating a queue multiple times with same metadata throws 409.

=== v0.5.5 -  (Johnny Halife)
- Added a Change Log
- Added support for copy-blob [WAZ::Blobs::BlobObject.copy("container/blob_name")]
- Refactored out the whole request logic to an _execute_ method on the SharedKeyCoreService
# WIP
- Added transparent support for block management (users don't know if their blob is being uploaded chunked or not)
- Added support for a blob to list its blocks

=== v0.5.4 - Sat Oct 17 19:35:48 2009 -0300 (Johnny Halife)
- Fixed method name for String.start_with? (previously starts_with?)

=== v0.5.3 - Sat Oct 17 18:20:51 2009 -0300 (Johnny Halife)